# GloVe

./: .gitignore  CMakeLists.txt  README.md  demo.sh
demo/: CMakeLists.txt  main.cpp
include/: glove.h
src/: CMakeLists.txt  cooccur.c  glove.c  shuffle.c  vocab_count.c
tests/: CMakeLists.txt
tests/cpp/: main.cpp
